# RESKit

./:  Notes on how to download ERA5 reanalysis weather data  .gitignore  .gitlab-ci.yml  LICENSE-MIT.txt  MANIFEST.in  README.md  Wind_Workflows.ipynb  contributors.txt  debug.py  development_delme.py  development_miniscript.py  getMerraAverage.py  pyproject.toml  requirements-dev.yml  requirements.yml  res_simple.py  run_csp.py  setup.py  workflow_manager_archiv.py
data/: bestTilt_europe_int.tif  merra_average_SWGDN_1994-2015_globe.tif  merra_average_SWGNT.tif  merra_average_SWGNT_1994-2017.tif  merra_average_windspeed_50m-shifted.tif  synthetic_turbine_params.csv
examples/:  Notes on how to download ERA5 reanalysis weather data  1.01-Weather-Reading_Weather_Data.ipynb  1.02-Weather-Simple_down_scaling.ipynb  1.03-Weather-Vertically_project_wind_speed.ipynb  2.01-Economic-Compute_levelized_cost_of_electricity.ipynb  3.01a-Wind-Load_Power_Curve.ipynb  3.01a-WindPower-Load_Power_Curve.ipynb  3.01b-Wind-Synthetic_Power_Curve.ipynb  3.01b-WindPower-Synthetic_Power_Curve.ipynb  3.02-Wind-Convolute_a_Power_Curve.ipynb  3.02-WindPower-Convolute_a_Power_Curve.ipynb  3.03-Wind-Design_Onshore_Turbine.ipynb  3.03-WindPower-Design_Onshore_Turbine.ipynb  3.04-Wind-Estimate_Turbine_Capital_Cost.ipynb  3.04-WindPower-Estimate_Turbine_Capital_Cost.ipynb  3.05a-Wind-Basic_Turbine_Simulation.ipynb  3.05a-WindPower-Basic_Turbine_Simulation.ipynb  3.05b-Wind-Turbine_Simulation_Workflow.ipynb  3.05b-WindPower-Turbine_Simulation_Workflow.ipynb  3.05c-Wind-Automated_Turbine_Simulation_Workflow.ipynb  3.05c-WindPower-Automated_Turbine_Simulation_Workflow.ipynb  3.05c-WindPower-Turbine_Simulation_Workflow.ipynb  3.05d-WindPower-More_Workflow_Example_Uses.ipynb  4.01-Solar-Load_Module.ipynb  4.01-SolarPower-Load_Module.ipynb  4.02-SolarPower-Simulation_Workflow.ipynb  4.03-Solar-Automated_Simulation_Workflow.ipynb  4.03-Solar-Automated_Simulation_Workflow_csp.ipynb  4.03-SolarPower-Automated_Simulation_Workflow.ipynb  5.01-Run-Geothermal-Simulations.py  5.01-Solar-CSP.ipynb  ETHOS.RESKit.Wind.ipynb  Fix_longitudes_public.ipynb  (+12 more)
(+1564 files in other folders)
